Fix content div covering site header.

--- a/shell.less
+++ b/shell.less
@@ -72,4 +72,5 @@ body
 	@effective-top-bottom-padding: 10px;
 	padding-top: @header-height + @effective-top-bottom-padding;
 	padding-bottom: @effective-top-bottom-padding;
+	z-index: -100;
 }
